2007-02-04  Al Riddoch  <alriddoch@zepler.org>

	* eris.cpp: Increment a borrowed reference before passing it to a
	  function that steals a reference.

2007-02-02  Al Riddoch  <alriddoch@zepler.org>

	* setup.py, eris.cpp: Rename modules to avoid conflicts.

	* test.py: Add testing for more stuff.

2006-11-08  Al Riddoch  <alriddoch@zepler.org>

	* eris_connection.cpp: Fix servername to name as its know in the
	  protocol and back end.

	* eris.cpp: Enable logging of some Eris stuff.

2006-10-03  Al Riddoch  <alriddoch@zepler.org>

	* eris_connection.cpp: Add support for ServerInfo method and callback.

2006-10-03  Al Riddoch  <alriddoch@zepler.org>

	* eris_view.cpp, PythonCallback.cpp: Return NULL in stub function to
	  prevent warnings.

	* PythonCallback_impl.h: Specialise wrap explicitly so it uses
	  the right kind of reference.

2006-10-03  Al Riddoch  <alriddoch@zepler.org>

	* eris_entity.cpp, eris_entity.h: New wrappers for Eris::Entity.

	* PythonCallback.cpp, PythonCallback_impl.h, PythonCallback.h:
	  Rework the callback and wrapper templates to be simpler,
	  specialise for more types, and add a callback template for two
	  arguments.

	* eris_account.cpp: Use improved callback templates.

	* eris_avatar.cpp: Add callbacks.

2006-10-02  Al Riddoch  <alriddoch@zepler.org>

	* eris.cpp, eris_avatar.cpp, eris_avatar.h, eris_view.cpp,
	  eris_view.cpp: Add new wrapper types for Eris::View and
	  Eris::Avatar.

	* PythonCallback.cpp: Add a specialisation for the wrapPtr
	  template that wraps Eris::Avatar.

	* wrapper_template.cpp: Example code to be used to create new
	  wrappers.

2006-10-02  Al Riddoch  <alriddoch@zepler.org>

	* PythonCallback.cpp, PythonCallback_impl.h, PythonCallback.h:
	  Implement wrap() for references, and rename the pointer wrapper
	  template to wrapPtr().

	* setup.py: Add necessary handling for library directories for eris.

2006-10-02  Al Riddoch  <alriddoch@zepler.org>
