@@ -1,3 +1,15 @@
+2007-12-10  Al Riddoch  <alriddoch@zepler.org>
+
+	* setup.py: Modify the structure so we no longer have many
+	  separate modules.
+
+	* kallisti.cpp: New version of the module file which creates sub
+	  modules representing each library.
+
+	* Makefile: Add a clean rule, and tag the rules as phony.
+
+	* test.py: Import eris the new way.
+
 2007-02-04  Al Riddoch  <alriddoch@zepler.org>
 
 	* eris.cpp: Increment a borrowed reference before passing it to a
